--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,7 @@ BAT = "c0cd4b16-88b7-57fa-983b-ab80aecada7e"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 IntervalSets = "8197267c-284f-5f27-9208-e0e47529a953"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 
 [compat]
 julia = "1.4"
